# supercollider

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  README_BELA.md  README_LINUX.md  README_MACOS.md  README_WASM.md  README_WINDOWS.md  SCVersion.txt
.github/: dependabot.yml
.github/workflows/: actions.yml  build_linux.yml  build_macos.yml  build_wasm.yml  build_windows.yml  lint_non_code.yml  test_linux.yml  test_macos.yml  test_windows.yml
HelpSource/: Help.schelp  OldHelpWrapper.html
HelpSource/Classes/: Array.schelp  BufRd.schelp  Buffer.schelp  Char.schelp  Dswitch1.schelp  Env.schelp  FreqScope.schelp  Function.schelp  FunctionDef.schelp  Integer.schelp  LinkClock.schelp  LinkJump.schelp  LinkPhase.schelp  LinkTempo.schelp  MIDIOut.schelp  Maybe.schelp  NodeMap.schelp  Number.schelp  Object.schelp  ObjectGui.schelp  Pdup.schelp  Pipe.schelp  Plotter.schelp  PostWindowURLHandler.schelp  Reblock.schelp  Resample.schelp  RingBuffer.schelp  Scale.schelp  Server.schelp  ServerOptions.schelp  SimpleNumber.schelp  Size.schelp  String.schelp  SynthDef.schelp  TDuty.schelp  UGen.schelp  Window.schelp
HelpSource/Guides/: Level_Compensation.schelp  UserFAQ.schelp  UsingMIDI.schelp  WritingTests.schelp
HelpSource/Other/: Licensing.html
HelpSource/Overviews/: Methods.html  SymbolicNotations.schelp
HelpSource/Reference/: Classes.schelp  Conditional-Execution.schelp  Control-Structures.schelp  Literals.schelp  Messages.schelp  NodeProxy_roles.schelp  Server-Architecture.schelp  Server-Command-Reference.schelp  Syntax-Shortcuts.schelp  Synth-Definition-File-Format.schelp  gui.schelp  if.schelp  iteration.schelp  loop.schelp
HelpSource/static/: browse.js  search.js
QtCollider/: QObjectProxy.cpp  QWidgetProxy.cpp  QcApplication.cpp  QcSignalSpy.h  type_codec.cpp  type_codec.hpp
QtCollider/primitives/: prim_QObject.cpp  prim_QPen.cpp  prim_QWidget.cpp  primitives.h
QtCollider/widgets/: QcGraph.cpp  image_painter.h
SCClassLibrary/SCDoc/: SCDoc.sc
SCClassLibrary/scide_scqt/: ScIDE.sc
SCDoc/: CMakeLists.txt
cmake_modules/: CompilerWarnings.cmake  FindFFTW3f.cmake  FindPortaudio.cmake  FindSndfile.cmake  FindYamlCpp.cmake  MacOSXBundleInfo.plist.in
common/: SC_ReplyImpl.hpp  SC_SndFileHelpers.hpp  SC_Version.hpp.in  SC_fftlib.cpp  SC_fftlib.hpp  fftlib.h
editors/: CMakeLists.txt
editors/sc-ide/: CMakeLists.txt
examples/demonstrations/: bit_reduction.scd
external_libraries/: CMakeLists.txt
external_libraries/portaudio/: CMakeLists.txt
external_libraries/portmidi/: CMakeLists.txt
include/common/: SC_Endian.h  SC_fftlib.h  clz.h
include/lang/: SC_LanguageClient.h
include/plugin_interface/: FFT_UGens.h  SCComplex.h  SC_BufGen.h  SC_Complex.h  SC_Constants.h  SC_DemandUnit.h  SC_Graph.h  SC_InterfaceTable.h  SC_Node.h  SC_PlugIn.h  SC_RGen.h  SC_Rate.h  SC_SndBuf.h  SC_Unit.h  SC_World.h  SC_sndfile_stub.h  Unroll.h  sc_msg_iter.h
include/server/: SC_WorldOptions.h
lang/: CMakeLists.txt
lang/LangPrimSource/: OSCData.cpp  PyrArrayPrimitives.cpp  PyrBitPrim.cpp  PyrFilePrim.cpp  PyrMathPrim.cpp  PyrPrimitive.cpp  PyrSched.cpp  PyrSerialPrim.cpp  PyrStringPrim.cpp  PyrUnixPrim.cpp  SC_AlsaMIDI.cpp  SC_AudioDevicePrim.cpp  SC_ComPort.cpp  SC_CoreMIDI.cpp  SC_HID_api.cpp  SC_Hungarian.h  SC_LID.cpp  SC_PortMIDI.cpp
lang/LangSource/: BisonHeaderInclude.hpp  DumpParseNode.cpp  GC.cpp  GC.h  OpcodeDetails.h  PyrInterpreter3.cpp  PyrKernel.h  PyrLexer.cpp  PyrLexer.h  PyrMathOps.cpp  PyrMessage.cpp  PyrMessage.h  PyrObject.cpp  PyrObject.h  PyrObjectHdr.h  PyrParseNode.cpp  PyrParseNode.h  PyrPrimitive.h  PyrSched.h  PyrSignal.cpp  PyrSlot.h  PyrSymbol.h  PyrSymbolTable.cpp  PyrSymbolTable.h  SCBase.h  SC_CLIOptions.hpp  SC_LanguageClient.cpp  SC_TerminalClient.cpp
langutils/: CMakeLists.txt
langutils/sc_lexer/: CMakeLists.txt
langutils/sc_lexer/include/: codepoint.hpp  codepoint_stream.hpp  lexer.hpp  normalise_source.hpp  source_utils.hpp  text_location.hpp  tokens.hpp
langutils/sc_lexer/src/: codepoint.cpp  codepoint_stream.cpp  source_utils.cpp  text_location.cpp  tokens.cpp
langutils/sc_lexer/standalone/: CMakeLists.txt  main.cpp
langutils/sc_lexer/test/: CMakeLists.txt  tests.cpp
platform/wasm/: .gitignore  SC_WebOsc.cpp  scsynth.pre.js
server/: CMakeLists.txt
server/plugins/: CMakeLists.txt  DelayUGens.cpp  DemoUGens.cpp  IOUGens.cpp  LinkUGen.cpp
server/scsynth/: CMakeLists.txt  SC_AU.cpp  SC_AU.h  SC_BufGen.cpp  SC_ComPort.cpp  SC_CoreAudio.cpp  SC_CoreAudio.h  SC_Graph.cpp  SC_GraphDef.cpp  SC_GraphDef.h  SC_Group.cpp  SC_Jack.cpp  SC_Lib.cpp  SC_Lib_Cintf.cpp  SC_Lib_Cintf.h  SC_MiscCmds.cpp  SC_Node.cpp  SC_PortAudio.cpp  SC_Prototypes.h  SC_SequencedCommand.cpp  SC_SequencedCommand.h  SC_UnitDef.cpp  SC_UnitDef.h  SC_WebAudio.cpp  SC_World.cpp  scsynth_main.cpp
server/supernova/: CMakeLists.txt
testsuite/classlibrary/: TestAbstractObject.sc  TestArray.sc  TestCoreUGens.sc  TestEnvGen_server.sc  TestFilterUGens.sc  TestIdentityDictionary.sc  TestKwargs.sc  TestLinkUGen.sc  TestNetAddr_Server.sc  TestNodeProxy_Server.sc  TestNonLocalReturn.sc  TestParserMisc.sc  TestPathName.sc  TestPdup.sc  TestPluginCommand.sc  TestPrimitive.sc  TestReblock.sc  TestResample.sc  TestSCDoc.sc  TestServer_SynthDefVersions.sc  TestServer_clientID_booted.sc  TestServer_dumpTree.sc  TestServer_nodeMove.sc  TestSourceCode.sc  TestString.sc  TestSwitch.sc  TestSynthDefVersions.sc  TestSynthDefVersions_Server.sc  TestSynthDescMsgFunc.sc  TestTempoClock.sc  TestUGen_RTAlloc.sc  TestUnitCommand.sc  TestVolume.sc
testsuite/interpreter/: CMakeLists.txt  pyrslot_enum.cpp  pyrslot_int64.cpp  pyrslot_int8.cpp  pyrslot_ptr.cpp  slot.cpp
testsuite/sclang/: CMakeLists.txt  nan_test.scd  sclang_large_alloc_crash.scd
testsuite/scripts/: print_results.scd  sclang_test_runner.scd  (+1 more)
testsuite/server/plugins/: CMakeLists.txt  c_api_test.c  shared_lib_test.cpp  testlib.cpp
testsuite/server/scsynth/: CMakeLists.txt  readwrite_test.cpp  scsynth_test.cpp
tools/: CMakeLists.txt  generate_parser_bison.sh
(+119 files in other folders)
